<resources>
    <string name="app_name">CandyStore</string>
    <string name="btn_continue_as_guest"><u>Continue as Guest</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sing_in_btn_text">Sing In</string>
    <string name="your_string_here"> <u>underline</u></string>
    <string name="forgot_pass_TV"><u>Forgot password</u></string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="logo_imView_cont_desc">logo image view</string>
    <string name="retry">Retry</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="login_incorrect">You`ve entered incorrect email or password</string>


</resources>