<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_layout_padding"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginBottom="@dimen/_10dp"
                android:id="@+id/logo_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/candies_login_image"
                android:contentDescription="@string/logo_imView_cont_desc"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:textColorHint="@color/black"
                app:startIconTint="@color/black"
                app:boxCornerRadiusTopEnd="@dimen/corners_radius_20dp"
                app:boxCornerRadiusTopStart="@dimen/corners_radius_20dp"
                app:boxStrokeColor="@color/input_layout_stroke_color"
                app:boxStrokeWidth="@dimen/boxStrokeWidth"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_imageView"
                app:startIconDrawable="@drawable/baseline_person_2_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_text_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                app:boxCornerRadiusBottomEnd="@dimen/corners_radius_20dp"
                app:boxCornerRadiusBottomStart="@dimen/corners_radius_20dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/input_layout_stroke_color"
                app:boxStrokeWidth="@dimen/boxStrokeWidth"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/forgot_pass_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_login"
                app:startIconDrawable="@drawable/baseline_lock_person_24"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/input_text_size_16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/forgot_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginBottom="@dimen/_15dp"
                android:fontFamily="@font/itim"
                android:text="@string/forgot_pass_TV"
                android:textSize="@dimen/_12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/sing_in_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.914"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_password"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Theme.AppCompat.DayNight"
                android:id="@+id/sing_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_40dp"
                android:background="@drawable/btn_sing_in_background"
                android:fontFamily="@font/itim"
                android:text="@string/sing_in_btn_text"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_36sp"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/hint_textview_guest_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_pass_btn"/>

            <TextView
                android:id="@+id/hint_textview_guest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/itim"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/guest_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sing_in_btn"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/guest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:fontFamily="@font/itim"
                android:text="@string/btn_continue_as_guest"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hint_textview_guest_btn"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progress_icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>